version/0.13/_sources/api/ansys/dpf/core/operators/math/amplitude/InputsAmplitude.rst.txt






:class:`InputsAmplitude`
========================

.. py:class:: ansys.dpf.core.operators.math.amplitude.InputsAmplitude(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   amplitude operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.amplitude()
   >>> my_fieldA = dpf.Field()
   >>> op.inputs.fieldA.connect(my_fieldA)
   >>> my_fieldB = dpf.Field()
   >>> op.inputs.fieldB.connect(my_fieldB)



.. py:currentmodule:: InputsAmplitude

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~fieldA`
            - Allows to connect fieldA input to the operator.
          * - :py:attr:`~fieldB`
            - Allows to connect fieldB input to the operator.







Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.math.amplitude import InputsAmplitude

Property detail
---------------

.. py:property:: fieldA
   :type: ansys.dpf.core.inputs.Input


   Allows to connect fieldA input to the operator.

   field or fields container with only one field is expected

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.amplitude()
   >>> op.inputs.fieldA.connect(my_fieldA)
   >>> # or
   >>> op.inputs.fieldA(my_fieldA)

.. py:property:: fieldB
   :type: ansys.dpf.core.inputs.Input


   Allows to connect fieldB input to the operator.

   field or fields container with only one field is expected

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.math.amplitude()
   >>> op.inputs.fieldB.connect(my_fieldB)
   >>> # or
   >>> op.inputs.fieldB(my_fieldB)






